objects/A_New_custom_object__c.object
<CustomObject>
    <fields>
        <fullName>ABC__c</fullName>
        <description>Adding the description</description>
        <label>ABC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_GVS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_field2__c</fullName>
        <description>kjgkgkgkgkgkghkhgk</description>
        <label>Custom field2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_for_Project__c</fullName>
        <label>Test for Project</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_git_step__c</fullName>
        <label>Test git step</label>
        <type>TextArea</type>
    </fields>
    <label>A New custom object</label>
    <nameField>
        <label>A New custom object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A New custom objects</pluralLabel>
    <recordTypes>
        <fullName>Count_Values</fullName>
        <active>true</active>
        <label>Count Values</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>